syntax = "proto3";

package greet;
option go_package="grpc_demo/greet/greetpb";

message Greeting {
	string first_name = 1;
	string last_name = 2;
}

// Unary
message GreetRequest {
	Greeting greeting = 1;
}

message GreetResponse {
	string result = 1;
}

// Bi-Di
message GreetEveryoneRequest {
	Greeting greeting = 1;
}

message GreetEveryoneResponse {
	string result = 1;
}

service GreetService {
	// Unary
	rpc Greet(GreetRequest) returns (GreetResponse) {};

	// Bi-Di
	rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse);
}
